results with 120 - 5, ran too fast

--- a/plot_resuts.ipynb
+++ b/plot_resuts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_2_2 = json.load(open(\"results/results_10_5_2911.json\"))"
+    "res = json.load(open(\"results/results_120_5_221203.json\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
    ],
    "source": [
     "# remember to change num_random_exp\n",
-    "plot_results(res_2_2, num_random_exp=5)"
+    "plot_results(res, num_random_exp=5)"
    ]
   },
   {
