--- a/dataset_helpers/predictor.ipynb
+++ b/dataset_helpers/predictor.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classify images using GoogleNet\n",
+    "Helper notebook used to classify the noisy images using GoogleNet (the same net used in our TCAV).\n",
+    "Gives accuracies and the largest classes - used for plotting in our results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
@@ -547,8 +557,8 @@
     "results = []\n",
     "\n",
     "INPUT = \"zebra_noise90pct\"\n",
-    "input_path = os.getcwd() + \"/\" + INPUT + \"/\"\n",
-    "output_path = os.getcwd() + \"/zebra_preds/\" + INPUT + \".csv\"\n",
+    "input_path = os.getcwd() + \"/data/\" + INPUT + \"/\"\n",
+    "output_path = os.getcwd() + \"/data/zebra_preds/\" + INPUT + \".csv\"\n",
     "\n",
     "for i, filename in enumerate(os.listdir(input_path)):\n",
     "    input_batch = path_to_tensor(input_path + filename)\n",
@@ -588,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 | packaged by conda-forge | (default, Jul 11 2021, 03:35:11) \n[Clang 11.1.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
