--- a/dataset_helpers/renamer.ipynb
+++ b/dataset_helpers/renamer.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rename images for consistency\n",
+    "Small helper notebook for renaming images in a folder. Useful when indexing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -8,8 +17,8 @@
    "source": [
     "import os\n",
     "\n",
-    "input_path = os.getcwd() + \"/zebra/\"\n",
-    "output_path = os.getcwd() + \"/zebra_noise50pct/\"\n",
+    "input_path = os.getcwd() + \"/data/zebra/\"\n",
+    "output_path = os.getcwd() + \"/data/zebra_noise50pct/\"\n",
     "\n",
     "for i, filename in enumerate(os.listdir(input_path)):\n",
     "    os.rename(input_path + filename, output_path + str(i) + \".jpg\")"
@@ -32,7 +41,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 | packaged by conda-forge | (default, Jul 11 2021, 03:35:11) \n[Clang 11.1.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
