--- a/dataset_helpers/saltnpepper.ipynb
+++ b/dataset_helpers/saltnpepper.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate salt n pepper noise"
+    "## Generate salt n pepper noise\n",
+    "Generates salt/pepper noise on top of all images in a folder. Used on our zebra images to generate noisy versions."
    ]
   },
   {
@@ -53,8 +55,8 @@
     "\n",
     "NOISE = 80 # pct\n",
     "\n",
-    "input_path = os.getcwd() + \"/zebra/\"\n",
-    "output_path = os.getcwd() + f\"/zebra_noise{NOISE}pct/\"\n",
+    "input_path = os.getcwd() + \"/data/zebra/\"\n",
+    "output_path = os.getcwd() + f\"/data/zebra_noise{NOISE}pct/\"\n",
     "\n",
     "for i, filename in tqdm(enumerate(os.listdir(input_path))):\n",
     "    im = Image.open(input_path + filename)\n",
