--- a/dataset_helpers/saltnpepper.ipynb
+++ b/dataset_helpers/saltnpepper.ipynb
@@ -5,8 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate salt n pepper noise\n",
-    "Generates salt/pepper noise on top of all images in a folder. Used on our zebra images to generate noisy versions."
+    "## Generate images with salt and pepper noise\n",
+    "Generates salt/pepper noise on top of all images in a folder. Used on our zebra images to generate noisy versions. from the original zebra images"
    ]
   },
   {
@@ -55,8 +55,8 @@
     "\n",
     "NOISE = 80 # pct\n",
     "\n",
-    "input_path = os.getcwd() + \"/data/zebra/\"\n",
-    "output_path = os.getcwd() + f\"/data/zebra_noise{NOISE}pct/\"\n",
+    "input_path = os.getcwd() + \"/data/data_no_noise/zebra/\"\n",
+    "output_path = os.getcwd() + f\"/data/data_noise{NOISE}/zebra/\"\n",
     "\n",
     "for i, filename in tqdm(enumerate(os.listdir(input_path))):\n",
     "    im = Image.open(input_path + filename)\n",
@@ -81,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (default, Sep 16 2021, 08:50:36) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
