named variables, files etc.

--- a/RECREATE_RESULTS.ipynb
+++ b/RECREATE_RESULTS.ipynb
@@ -41,6 +41,30 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Parameters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "num_images = 120\n",
+        "num_random_exp = 5\n",
+        "\n",
+        "# this is a regularizer penalty parameter for linear classifier to get CAVs. \n",
+        "alphas = [0.1]\n",
+        "\n",
+        "target = 'zebra'\n",
+        "concepts = [\"dotted\",\"striped\",\"zigzagged\"]\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -62,13 +86,7 @@
         "      \n",
         "utils.make_dir_if_not_exists(activation_dir)\n",
         "utils.make_dir_if_not_exists(working_dir)\n",
-        "utils.make_dir_if_not_exists(cav_dir)\n",
-        "\n",
-        "# this is a regularizer penalty parameter for linear classifier to get CAVs. \n",
-        "alphas = [0.1]\n",
-        "\n",
-        "target = 'zebra'\n",
-        "concepts = [\"dotted\",\"striped\",\"zigzagged\"]\n"
+        "utils.make_dir_if_not_exists(cav_dir)"
       ]
     },
     {
@@ -97,7 +115,7 @@
       },
       "outputs": [],
       "source": [
-        "act_generator = act_gen.ImageActivationGenerator(mymodel, source_dir, activation_dir, max_examples=120)"
+        "act_generator = act_gen.ImageActivationGenerator(mymodel, source_dir, activation_dir, max_examples=num_images)"
       ]
     },
     {
@@ -3287,7 +3305,6 @@
       "source": [
         "import absl\n",
         "absl.logging.set_verbosity(0)\n",
-        "num_random_exp = 5\n",
         "\n",
         "mytcav = tcav.TCAV(sess, target,\n",
         "                   concepts, bottlenecks,\n",
@@ -3390,7 +3407,7 @@
       "outputs": [],
       "source": [
         "import json\n",
-        "with open(f\"results/results_superdata_120_5_20221206.json\", \"w\") as outfile:\n",
+        "with open(f\"results/results_superdata_{num_images}_{num_random_exp}_20221206.json\", \"w\") as outfile:\n",
         "    json.dump(results, outfile)"
       ]
     }
