--- a/dataset_helpers/classifier.ipynb
+++ b/dataset_helpers/classifier.ipynb
@@ -386,8 +386,8 @@
     }
    ],
    "source": [
-    "# læs labels\n",
-    "labels_map = [i for i in open(\"labels_map.txt\").read().splitlines()]\n",
+    "# Read labels - these are defined in a csv given in googlenet documentation\n",
+    "labels_map = [i for i in open(\"googlenet_labels_map.txt\").read().splitlines()]\n",
     "model = GoogLeNet.from_pretrained('googlenet')\n",
     "model.eval()"
    ]
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preprocess image\n",
+    "# Preprocess image - googlenet only takes images of certain dimensions\n",
     "preprocess = transforms.Compose([\n",
     "  transforms.Resize(256),\n",
     "  transforms.CenterCrop(224),\n",
@@ -418,6 +418,14 @@
     "\n",
     "    input_tensor = preprocess(input_image)\n",
     "    return input_tensor.unsqueeze(0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict on a given folder of images and store the results to a file"
    ]
   },
   {
@@ -556,9 +564,10 @@
     "\n",
     "results = []\n",
     "\n",
-    "INPUT = \"zebra_noise90pct\"\n",
+    "INPUT = \"zebra_noise90\"\n",
+    "\n",
     "input_path = os.getcwd() + \"/data/\" + INPUT + \"/\"\n",
-    "output_path = os.getcwd() + \"/data/zebra_preds/\" + INPUT + \".csv\"\n",
+    "output_path = os.getcwd() + \"/results/googlenet_preds/\" + INPUT + \".csv\"\n",
     "\n",
     "for i, filename in enumerate(os.listdir(input_path)):\n",
     "    input_batch = path_to_tensor(input_path + filename)\n",
