--- a/dataset_helpers/renamer.ipynb
+++ b/dataset_helpers/renamer.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Rename images for consistency\n",
-    "Small helper notebook for renaming images in a folder. Useful when indexing"
+    "Small helper notebook for renaming images in a folder. Useful when indexing\n",
+    "\n",
+    "Renames images to 0.jpg, 1.jpg, 2.jpg .... etc."
    ]
   },
   {
@@ -17,11 +19,12 @@
    "source": [
     "import os\n",
     "\n",
-    "input_path = os.getcwd() + \"/data/zebra/\"\n",
-    "output_path = os.getcwd() + \"/data/zebra_noise50pct/\"\n",
+    "before = os.getcwd() + \"/data/data_no_noise/zebra/\"\n",
+    "after = os.getcwd() + \"/data/data_noise10/zebra/\"\n",
     "\n",
-    "for i, filename in enumerate(os.listdir(input_path)):\n",
-    "    os.rename(input_path + filename, output_path + str(i) + \".jpg\")"
+    "# Renames images to 0.jpg, 1.jpg, 2.jpg .... etc.\n",
+    "for i, filename in enumerate(os.listdir(before)):\n",
+    "    os.rename(before + filename, after + str(i) + \".jpg\")"
    ]
   }
  ],
